--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.0.0-rc.1",
-    "lodash": "^4.6.1",
-    "kik": "^1.0.0"
+    "lodash": "^4.6.1"
   }
 }
