--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "Check if any dependencies have been unpublished",
   "main": "kikgate.js",
   "bin": {
-    "kikgate": "./kikgate.js"
+    "kikgate": "./dist/kikgate.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel kikgate.js -d dist"
   },
   "author": "Kriegslustig <github@ls7.ch>",
   "license": "MIT",
   "dependencies": {
     "async": "^2.0.0-rc.1",
     "lodash": "^4.6.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
